--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,13 +1,14 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-%table#movies
+
   = form_tag movies_path, :method => :get, id: "ratings_form" do
     Include:
     - @rating_selected.keys.each do |rating|
       = rating
-      = check_box_tag "ratings[#{rating}]", 1, @rating_selected[rating]
+      = check_box_tag, "ratings[#{rating}]", 1, @rating_selected[rating]
     = submit_tag 'Refresh', id:"ratings_submit"
+  %table#movies
   %thead
     %tr
       %th{class: ('hilite' if params[:sort_by] == 'title'), id: 'title_header'}= link_to('Movie Title', movies_path(sort_by: 'title'))
